"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-04-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-62:
	  Source cleanup: removed extraneous #ifndef guards in .cc files
		replaced persistent_object_manager calls in
		Object/expr/*_list.cc for ease of maintenance
		and comprehensibility, calling collect_pointer_list,
		write_pointer_list, read_pointer_list, load_once_pointer_list.
	  No regressions.


2011-03-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-61:
	  global_entry.cc: explicitly instantiate footprint_frame_maps
		to fix undefined reference to dtor.
	  Verified against g++-4.6.


2011-03-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-60:
	  hacknet[verilog]: added options to automatically escape
		identifiers with non-identifier characters:
		mangle_escape_instance_identifiers,
		mangle_escape_type_identifiers
		Already complying identifier will not be mangled.
		Options documented.  
	  Unused channels/datastructs are omitted from locals list and ports.
	  Test cases updated and added.
	  This version of hac-to-verilog is ready for prime time.


2011-03-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-59:
	  util/ChangeLog: workaround unsigned negative number parsing
		bug in libstdc++ with configure-detection.
		This fixes one test case: test/prsim/channel-test-h-07


2011-03-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-58:
	  hacknet: continued work on outputting verilog, added struct/proc
		ports to subcircuit and instances (flagged always used).
		checking for is_aliased_to_port() is now using
		comparison against number of port entries, instead of
		a function provided by connection_policy base,
		which is more consistent, less hacky.  
		More 'similar' function re-factoring.