@@ -1,5 +1,5 @@
 @c "config.texi"
-@c $Id: config.texi,v 1.14 2011/03/31 01:21:45 fang Exp $
+@c $Id: config.texi,v 1.15 2011/04/03 22:31:18 fang Exp $
 
 @c ****************************************************************************
 @node Configuration Options
@@ -68,6 +68,7 @@ emitted output (because not all SPICEs are created alike).
 @include config/prefer_port_aliases.texi
 @include config/preferred_names.texi
 @include config/emit_node_aliases.texi
+@include config/emit_node_caps.texi
 @c @include config/top_type_ports.texi
 @include config/transistor_prefix.texi
 @include config/subcircuit_instance_prefix.texi
