@@ -3,6 +3,18 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2011-04-03	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-84-63:
+	  hacknet: added new option 'emit_node_caps=1' to print nodes'
+		parasitic parameters at every level of hierarchy, 
+		accumulated over devices and subcircuit connections.
+		values: diffusion area, diffusion perimieter, gate area,
+			wire area (0 until back-annotation or attribute
+			support is added)
+	  Documented, test cases added.
+
+
 2011-04-01	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-84-62:
